--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -12,17 +12,54 @@
     padding-top: 25px;
     padding-bottom: 80px;
 }
-.la-bars{
-    font-size: 24px;
-    color: #ff6b00;
-}
+.nav-icon-5{
+    width: 35px;
+    height: 30px;
+    margin: 10px 10px;
+    position: relative;
+    cursor: pointer;
+    display: inline-block;
+  }
+  .nav-icon-5 span{
+    background-color:#fff;
+    position: absolute;
+    border-radius: 2px;
+    transition: .3s cubic-bezier(.8, .5, .2, 1.4);
+    width:100%;
+    height: 4px;
+    transition-duration: 500ms
+  }
+  .link-container{
+    position: absolute;
+    top: -700px;
+    left: -2000px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+
+  }
+  .un-list.active{
+    display: block;
+  }
+  .link-container.active{
+    width: 100%;
+    display: block;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    top: 30%;
+    left: 0;
+    right: 0;
+    text-align: center;
+  }
+
 .navParagraph{
     padding-left: 90px;
     padding-bottom: 90px;
     width: 50%;  
     margin: 0;
     font-weight:700;
-    font-size: 50px;
+    font-size: 45px;
     text-transform: uppercase;
 }
 .paragraphContainer{
@@ -59,7 +96,7 @@ align-items: center;
     transition: color 0.3s ease-in-out;
 }
 
-@media (max-width:400px) {
+@media (max-width:750px) {
     
     .Navbar-img{
         max-width: 100%;
@@ -69,10 +106,16 @@ align-items: center;
     display: none;
     }
 }
-/**@media (min-width:350px) and (max-width:470px) {
+@media (min-width:750px) {
     
-    .Navbar-img{
-        max-width: 88%;
-
+    
+    .un-list.active{
+      display: flex;
     }
-}**/
+
+     .link-container.active{
+      position: initial;
+      margin: 0;
+      display: inline;
+     }
+}
