--- a/src/Styles/Burguerbutton.css
+++ b/src/Styles/Burguerbutton.css
@@ -1,4 +1,20 @@
-
+.nav-icon-5{
+  width: 35px;
+  height: 30px;
+  margin: 10px 10px;
+  position: relative;
+  cursor: pointer;
+  display: inline-block;
+}
+.nav-icon-5 span{
+  background-color:#fff;
+  position: absolute;
+  border-radius: 2px;
+  transition: .3s cubic-bezier(.8, .5, .2, 1.4);
+  width:100%;
+  height: 4px;
+  transition-duration: 500ms
+}
 .nav-icon-5 span:nth-child(1){
     top:0px;
     left: 0px;
