--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -12,34 +12,14 @@
     padding-top: 25px;
     padding-bottom: 80px;
 }
-.nav-icon-5{
-    width: 35px;
-    height: 30px;
-    margin: 10px 10px;
-    position: relative;
-    cursor: pointer;
-    display: inline-block;
-  }
-  .nav-icon-5 span{
-    background-color:#fff;
-    position: absolute;
-    border-radius: 2px;
-    transition: .3s cubic-bezier(.8, .5, .2, 1.4);
-    width:100%;
-    height: 4px;
-    transition-duration: 500ms
-  }
+
   .link-container{
-    position: absolute;
-    top: -700px;
+    position: absolute; 
     left: -2000px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
 
-  }
-  .un-list.active{
-    display: block;
   }
   .link-container.active{
     width: 100%;
@@ -78,13 +58,9 @@ align-items: center;
     max-width: 50%;
 }
 
-.un-list{
-    display: flex;
-}
 .list-link{
     list-style: none;
-    padding:0 10px ;
-    
+    padding:0 10px ; 
 }
 .Link{
     text-decoration: none;
@@ -105,17 +81,21 @@ align-items: center;
     .paragraphContainer{
     display: none;
     }
+    .un-list{
+      padding: 0 !important;
+    }
 }
 @media (min-width:750px) {
     
     
-    .un-list.active{
+    .un-list{
       display: flex;
+      padding: 0 !important;
     }
 
-     .link-container.active{
+     .link-container{
       position: initial;
       margin: 0;
-      display: inline;
+      display: flex;
      }
 }
