--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -5,12 +5,14 @@
 .navbarContainer { 
     display: flex;
     width: 100%;
-    justify-content: space-around;
+    justify-content: end;
+    padding: 25px 0 80px 0;
     background-image: url(../assets/banner.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     padding-top: 25px;
     padding-bottom: 80px;
+    z-index: 1;
 }
 
   .link-container{
@@ -19,6 +21,7 @@
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    transition: all .5s ease;
 
   }
   .link-container.active{
@@ -31,6 +34,7 @@
     left: 0;
     right: 0;
     text-align: center;
+    z-index: 1;
   }
 
 .navParagraph{
@@ -83,19 +87,36 @@ align-items: center;
     }
     .un-list{
       padding: 0 !important;
+        top: -700px;
+        left: -2000px;
+        list-style: none;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        font-size: 25px;
+        position: absolute;
+    }
+    .Link{
+        list-style: none;
+        padding:0 10px ; 
+        font-size: 25px;
+        position: initial;
     }
 }
 @media (min-width:750px) {
-    
-    
+   
     .un-list{
       display: flex;
       padding: 0 !important;
+      position: initial;
+      margin: 0;
     }
 
      .link-container{
       position: initial;
       margin: 0;
       display: flex;
+      padding-right: 25px;
      }
 }
