--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -11,7 +11,6 @@
     background-size: cover;
     background-repeat: no-repeat;
     padding-top: 25px;
-    padding-bottom: 80px;
     z-index: 1;
 }
 
@@ -103,6 +102,9 @@ align-items: center;
         font-size: 25px;
         position: initial;
     }
+    .navbarContainer{
+        padding: 25px 0 45px 0;
+    }
 }
 @media (min-width:750px) {
    
@@ -112,6 +114,8 @@ align-items: center;
       position: initial;
       margin: 0;
     }
+
+    
 
      .link-container{
       position: initial;
