--- a/src/assets/styles/sobreNosotros.css
+++ b/src/assets/styles/sobreNosotros.css
@@ -1,6 +1,7 @@
 .sobreNosotros_container{
   display: flex;
   background-color: #00ABF3;
+  flex-direction: column;
   height: 100vh;
 }
 
@@ -18,4 +19,20 @@
   background-image: url(../img/room4.jpg);
   background-size: cover;
   background-position: center;
+}
+
+@media (max-width:768px) {
+  .sobreNosotros_img{
+    width: 100%;
+    height: 43%;
+    position: absolute;
+    top: 217rem;
+    background-image: url(../img/room4.jpg);
+    background-size: cover;
+    background-position: center;
+  }
+  
+  .sobreNosotros_container{
+   align-items: center;
+  }
 }
