--- a/src/index.css
+++ b/src/index.css
@@ -6,17 +6,19 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #ffffff;  
+  background-color: #213547;  
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: smooth
 }
 #root{
   margin: 0;
   padding: 0;
 }
+
 
 a {
   font-weight: 500;
