--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -39,11 +39,11 @@
 .navParagraph{
     padding-left: 90px;
     padding-bottom: 90px;
-    width: 50%;  
+    width: 89%;  
     margin: 0;
     font-weight:700;
-    font-size: 45px;
-    text-transform: uppercase;
+    font-size: 60px;
+    font-family: 'Ephesis', cursive;
 }
 .paragraphContainer{
     display: flex;
